<?xml version="1.0"?>
<package format="3">
  <name>damvi</name>
  <version>0.0.1</version>
  <description>integtation package for damvi</description>
  <maintainer email="sinjase@gmail.com">Jaeseo Shin</maintainer>
  <license>TODO: License declaration</license>

  <!-- 빌드 도구 -->
  <!-- Runtime dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
