<?xml version="1.0"?>
<package format="3">
  <name>damvi</name>
  <version>0.0.1</version>
  <description>Package that contains only launch files</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- 런치 파일 사용을 위한 의존성 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
</package>
